# coredns-controller

./: .gitignore  Dockerfile  Makefile  pyproject.toml
coredns_ctl/: app.py  database.py  schema.graphql  schema.py
coredns_ctl/models/: __init__.py  record.py  zone.py
coredns_ctl/schema/: __init__.py  mutation.py  query.py
tests/: test_coredns_ctl.py
