[tool.poetry]
name = "coredns_ctl"
version = "0.1.0"
description = ""
authors = ["enseed <me@enseed.dev>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.40"}
aiomysql = "^0.1.1"
python-dotenv = {extras = ["cli"], version = "^0.20.0"}
uvicorn = {extras = ["standard"], version = "^0.18.2"}
alembic = "^1.8.1"
strawberry-graphql = {extras = ["debug-server"], version = "^0.124.0"}
fastapi = "^0.79.0"
install = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
